Ajout de contenu, 90% du projet fait

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
         <div class="Logo_panier-container">
             <div id="cart-counter" class="cart-counter">0</div>
-          <img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier">
+            <a href="panier.html"><img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier"></a>
         </div>
       </nav>
     </header>
@@ -34,7 +34,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-// Ajouter un gestionnaire d'événements pour rediriger vers la page produit avec le prix
-  // pokemonCard.addEventListener('click', () => {
-  //   window.location.href = `produit.html?name=${pokemon.name}&price=${randomPrice}`;
-  // });
