--- a/panier.html
+++ b/panier.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produit</title>
   <link rel="stylesheet" href="style.css">
+  <title>Pokémon Shop</title>
 </head>
 <body>
     <header>
@@ -21,11 +21,15 @@
           </div>
         </nav>
       </header>
-    
-    <h1 class="titrePrincipal">Détails du Pokémon</h1>
-    <section class="evolutionDetail">
-        <div id="pokemon-details-container" class="pokemonDetails"></div>
-    </section>
-    <script src="produit.js"></script>
-</body>
+  
+    <h1 class="titrePrincipal">Votre panier</h1>
+
+
+    <section id="captured-pokemons" class="captured-pokemons"></section>
+
+    <section id="total-price" class="total-price">Total: €0</section>
+
+    <script src="panier.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
