Correction bug + Ajout d'animation + Maj ReadMe

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h1 class="titrePrincipal">Bienvenue sur le Pokémon Shop</h1>
 
-    <h2 class="titreVedette">Nos pokémons en vedette, n'hésitez plus et capturez les avec votre pokécarte</h2>
+    <h2 class="titreVedette">Nos pokémons légendaires en vedette, n'hésitez plus et capturez les avec votre pokécarte</h2>
 
     <section id="random-pokemon"></section>
 
