--- a/produit.html
+++ b/produit.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produit</title>
   <link rel="stylesheet" href="style.css">
+  <title>Produit</title>
 </head>
 <body>
-    <header>
-        <nav>
-          <div class="Logo_pokemon-container">
-            <img src="Image/Logo_pokemon.png" alt="Pokémon Shop Logo" class="Logo_pokemon">
-          </div>
-          <ul class="nav-links">
-            <li><a href="index.html">Accueil</a></li>
-          </ul>
-          <div class="Logo_panier-container">
-              <div id="cart-counter" class="cart-counter">0</div>
-              <a href="panier.html"><img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier"></a>
-          </div>
-        </nav>
-      </header>
+  <header>
+      <nav>
+        <div class="Logo_pokemon-container">
+          <img src="Image/Logo_pokemon.png" alt="Pokémon Shop Logo" class="Logo_pokemon">
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html">Accueil</a></li>
+        </ul>
+        <div class="Logo_panier-container">
+            <div id="cart-counter" class="cart-counter">0</div>
+            <a href="panier.html"><img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier"></a>
+        </div>
+      </nav>
+    </header>
     
     <h1 class="titrePrincipal">Détails du Pokémon</h1>
-    <section class="evolutionDetail">
+
+    <section class="pokemon-details">
         <div id="pokemon-details-container" class="pokemonDetails"></div>
     </section>
     <script src="produit.js"></script>
