--- a/panier.html
+++ b/panier.html
@@ -4,26 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Pokémon Shop</title>
+  <title>Panier</title>
 </head>
 <body>
     <header>
-        <nav>
-          <div class="Logo_pokemon-container">
-            <img src="Image/Logo_pokemon.png" alt="Pokémon Shop Logo" class="Logo_pokemon">
-          </div>
-          <ul class="nav-links">
-            <li><a href="index.html">Accueil</a></li>
-          </ul>
-          <div class="Logo_panier-container">
-              <div id="cart-counter" class="cart-counter">0</div>
-              <a href="panier.html"><img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier"></a>
-          </div>
-        </nav>
-      </header>
+      <nav>
+        <div class="Logo_pokemon-container">
+          <img src="Image/Logo_pokemon.png" alt="Pokémon Shop Logo" class="Logo_pokemon">
+        </div>
+        <ul class="nav-links">
+          <li><a href="index.html">Accueil</a></li>
+        </ul>
+        <div class="Logo_panier-container">
+            <div id="cart-counter" class="cart-counter">0</div>
+            <a href="panier.html"><img src="Image/Logo_panier.png" alt="Panier" class="Logo_panier"></a>
+        </div>
+      </nav>
+    </header>
   
     <h1 class="titrePrincipal">Votre panier</h1>
 
+    <button id="clear-cart-button">Vider le Panier</button>
 
     <section id="captured-pokemons" class="captured-pokemons"></section>
 
